src/main/java/com/example/common/error/Exception500.java
package com.example.common.error;

public class Exception500 extends RuntimeException{
   public Exception500(String msg) {
        super(msg);
    }
}
